# PocketSlate

./: .gitignore  .gitmodules  .swiftlint.yml  Brewfile  Gemfile  README.md  justfile  package.json  pyproject.toml
.github/workflows/: ci.yml
Locales/: en.js
Modules/AppLocales/: .gitignore  Package.swift  README.md
Modules/AppUI/: Package.swift
Modules/Backend/: Package.swift
Modules/CDPersist/: Package.swift
Modules/Features/: .gitignore  Package.swift
Modules/Models/: Package.swift
Modules/Navigation/: Package.swift
Modules/PSShared/: Package.swift
Modules/PocketSlateAPI/: .gitignore  Package.swift
Playground/: AppLogo.swift  ContentView.swift  Info.plist  PlaygroundApp.swift  Screens.swift
Playground/Extensions/: FileManager+extensions.swift
Playground/Utilities/: SavePanel.swift  Shell.swift
PocketSlate/: AppDelegate_iOS.swift  AppDelegate_macOS.swift  Constants.swift  ContentView.swift  Features.swift  PocketSlate.entitlements  PocketSlateApp.swift
PocketSlate.xcodeproj/: project.pbxproj
PocketSlate.xcworkspace/: contents.xcworkspacedata
PocketSlate/Enumerations/: AppSizes.swift  LocaleSelectorTypes.swift  Screens.swift
PocketSlate/Extensions/: EventModifiers+extensions.swift  Locale+extensions.swift  (+5 more)
Resources/: swift-plugin-trust.json
Scripts/: encode_certificates.py  generateLocales.js  import_provisioning_profile.bash  import_signing_certificate.bash  make_logo_assets.py  make_secrets.py  pull_gitmodules.py  trust_swift_plugins.py
Tests/: PocketSlate.xctestplan
fastlane/: Appfile  ExportOptions.plist  Fastfile  Gymfile
(+155 files in other folders)
